# brk

./: Cargo.toml
crates/brk_bencher/src/: io.rs  memory.rs
crates/brk_cli/: Cargo.toml
crates/brk_cli/assets/: brk-healthcheck.service  brk-healthcheck.sh  brk-healthcheck.timer
crates/brk_cli/src/: config.rs  main.rs  paths.rs  watchdog.rs
crates/brk_client/src/: lib.rs
crates/brk_computer/: Cargo.toml
crates/brk_computer/examples/: computer.rs  computer_bench.rs  computer_read.rs  full_bench.rs  tree.rs
crates/brk_computer/src/: lib.rs
crates/brk_computer/src/blocks/: lookback.rs
crates/brk_computer/src/indicators/: compute.rs  import.rs  vecs.rs
crates/brk_computer/src/internal/per_block/computed/: resolutions.rs
crates/brk_computer/src/investing/: import.rs
crates/brk_computer/src/macro_economy/: compute.rs  import.rs  mod.rs
crates/brk_computer/src/macro_economy/commodities/: import.rs  vecs.rs
crates/brk_computer/src/macro_economy/employment/: import.rs  vecs.rs
crates/brk_computer/src/macro_economy/growth/: import.rs  vecs.rs
crates/brk_computer/src/macro_economy/inflation/: import.rs  vecs.rs
crates/brk_computer/src/macro_economy/interest_rates/: import.rs  vecs.rs
crates/brk_computer/src/macro_economy/money_supply/: import.rs  mod.rs  vecs.rs
crates/brk_computer/src/macro_economy/other/: import.rs  vecs.rs
crates/brk_computer/src/market/: compute.rs
crates/brk_computer/src/market/indicators/: compute.rs  import.rs  vecs.rs
crates/brk_error/src/: lib.rs
crates/brk_fetcher/examples/: fetcher.rs
crates/brk_fetcher/src/: binance_futures.rs  fred.rs  lib.rs  yahoo.rs
crates/brk_indexer/src/: indexes.rs  lib.rs  stores.rs
crates/brk_indexer/src/vecs/: mod.rs
crates/brk_mempool/src/: sync.rs
crates/brk_query/examples/: list.rs  query.rs
crates/brk_query/src/: lib.rs
crates/brk_query/src/impl/block/: info.rs
crates/brk_query/src/impl/mining/: block_fee_rates.rs
crates/brk_rpc/src/: lib.rs
crates/brk_server/examples/: bindgen.rs  server.rs
crates/brk_server/src/api/server/: mod.rs
crates/brk_store/src/: any.rs  lib.rs  meta.rs
crates/brk_types/: Cargo.toml
crates/brk_types/src/: cpfp.rs  output_type.rs  sats.rs  sync_status.rs  tx.rs
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/deployment/: README.md
docs/deployment/systemd/: brk-sshfs-bitcoin.service.example  brk-tunnel-bitcoind.service.example  brk.env.example  brk.service.example
modules/brk-client/: index.js
scripts/: remount-umbrel.sh
vendor-vecdb/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  README.md
vendor-vecdb/examples/: bench.rs  io_vs_mmap.rs  iter_vs_mmap.rs  pco_bench.rs  pcodec.rs  signal_test.rs  zerocopy.rs
vendor-vecdb/src/: cursor.rs  lib.rs
vendor-vecdb/src/base/: mod.rs  read_only.rs  read_write.rs  rollback.rs
vendor-vecdb/src/base/change/: cursor.rs  data.rs  mod.rs
vendor-vecdb/src/base/format/: bytes.rs  mod.rs
vendor-vecdb/src/base/header/: inner.rs  mod.rs
vendor-vecdb/src/base/options/: from.rs  mod.rs
vendor-vecdb/src/base/shared_len/: default.rs  mod.rs
vendor-vecdb/src/base/with_prev/: default.rs  mod.rs
vendor-vecdb/src/bytes/: array.rs  mod.rs  numeric.rs
vendor-vecdb/src/error/: mod.rs  zerocopy.rs
vendor-vecdb/src/exit/: guard.rs  mod.rs
vendor-vecdb/src/iterators/: writer.rs
vendor-vecdb/src/ops/: checked_sub.rs  mod.rs  saturating_add.rs
vendor-vecdb/src/stamp/: bytes.rs  conversions.rs  mod.rs
vendor-vecdb/src/traits/: any.rs  any_exportable.rs  any_readable.rs  any_serializable.rs  any_stored.rs  any_with_schema.rs  any_with_writer.rs  formattable.rs  importable.rs  index.rs  mod.rs  printable.rs  read_only_clone.rs  readable.rs  readable_option.rs  storage_mode.rs  stored.rs  typed.rs  value.rs  value_strategy.rs  writable.rs
vendor-vecdb/src/variants/: macros.rs  mod.rs
vendor-vecdb/src/variants/cached/: any_vec.rs  budget.rs  clone.rs  mod.rs  read_only_clone.rs  readable.rs  typed.rs
vendor-vecdb/src/variants/compressed/: mod.rs
vendor-vecdb/src/variants/compressed/inner/: mod.rs  pages.rs  strategy.rs
vendor-vecdb/src/variants/compressed/lz4/: mod.rs  strategy.rs  value.rs
vendor-vecdb/src/variants/compressed/pco/: mod.rs  strategy.rs  trait.rs
vendor-vecdb/src/variants/compressed/sources/: io.rs  mmap.rs  mod.rs
vendor-vecdb/src/variants/compressed/zstd/: mod.rs  strategy.rs  value.rs
vendor-vecdb/src/variants/eager/: any_stored_vec.rs  any_vec.rs  importable.rs  mod.rs  readable.rs  readable_cloneable.rs  stored.rs  typed.rs  writable.rs
vendor-vecdb/src/variants/eager/compute/: aggregates.rs  arithmetic.rs  cumulative.rs  lookback.rs  mod.rs  statistics.rs  transforms.rs
vendor-vecdb/src/variants/lazy/: mod.rs
vendor-vecdb/src/variants/lazy/agg/: any_vec.rs  clone.rs  fold.rs  mod.rs  readable.rs  sparse.rs  typed.rs
vendor-vecdb/src/variants/lazy/delta/: any_vec.rs  avg.rs  change.rs  clone.rs  mod.rs  op.rs  rate.rs  readable.rs  sub.rs  typed.rs
vendor-vecdb/src/variants/raw/: mod.rs
vendor-vecdb/src/version/: add.rs  bytes.rs  conversions.rs  display.rs  mod.rs  sum.rs  try_from_path.rs
vendor-vecdb/tests/: basic.rs  basic2.rs  comprehensive.rs  compute_functions.rs  concurrent_rw.rs  consistency.rs  integrity.rs  iterators.rs  raw_last_page.rs  rollback.rs  rollback_truncation.rs  scaling_bench.rs  write_visibility.rs
website/: .gitignore  service-worker.js
website/scripts/: client.js  main.js  types.js
website/scripts/chart/: capture.js  index.js  legend.js
website/scripts/options/: cointime.js  constants.js  full.js  investing.js  macro_economy.js  market.js  mining.js  network.js  partial.js  series.js  shared.js  types.js  unused.js  utils.js
website/scripts/options/distribution/: activity.js  cost-basis.js  data.js  holdings.js  index.js  prices.js  profitability.js  valuation.js
website/scripts/options/market/: onchain.js
website/scripts/panes/: chart.js
website/scripts/utils/: array.js  colors.js  dom.js  timing.js  units.js
website/styles/: elements.css  variables.css
(+67 files in other folders)
