[workspace]
resolver = "3"
members = ["crates/*"]
package.description = "The Bitcoin Research Kit is a suite of tools designed to extract, compute and display data stored on a Bitcoin Core node"
package.license = "MIT"
package.edition = "2024"
package.version = "0.1.0-beta.1"
package.homepage = "https://bitcoinresearchkit.org"
package.repository = "https://github.com/bitcoinresearchkit/brk"
package.readme = "README.md"

[profile.dev]
lto = "thin"
codegen-units = 16
opt-level = 2
split-debuginfo = "unpacked"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = "release"

[profile.dist]
inherits = "release"

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
aide = { version = "0.16.0-alpha.2", features = ["axum-json", "axum-query"] }
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "query", "tokio", "tracing"] }
bitcoin = { version = "0.32.8", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
brk_alloc = { version = "0.1.0-beta.1", path = "crates/brk_alloc" }
brk_bencher = { version = "0.1.0-beta.1", path = "crates/brk_bencher" }
brk_bindgen = { version = "0.1.0-beta.1", path = "crates/brk_bindgen" }
brk_cli = { version = "0.1.0-beta.1", path = "crates/brk_cli" }
brk_client = { version = "0.1.0-beta.1", path = "crates/brk_client" }
brk_cohort = { version = "0.1.0-beta.1", path = "crates/brk_cohort" }
brk_computer = { version = "0.1.0-beta.1", path = "crates/brk_computer" }
brk_error = { version = "0.1.0-beta.1", path = "crates/brk_error" }
brk_fetcher = { version = "0.1.0-beta.1", path = "crates/brk_fetcher" }
brk_indexer = { version = "0.1.0-beta.1", path = "crates/brk_indexer" }
brk_iterator = { version = "0.1.0-beta.1", path = "crates/brk_iterator" }
brk_logger = { version = "0.1.0-beta.1", path = "crates/brk_logger" }
brk_mempool = { version = "0.1.0-beta.1", path = "crates/brk_mempool" }
brk_query = { version = "0.1.0-beta.1", path = "crates/brk_query", features = ["tokio"] }
brk_reader = { version = "0.1.0-beta.1", path = "crates/brk_reader" }
brk_rpc = { version = "0.1.0-beta.1", path = "crates/brk_rpc" }
brk_server = { version = "0.1.0-beta.1", path = "crates/brk_server" }
brk_store = { version = "0.1.0-beta.1", path = "crates/brk_store" }
brk_traversable = { version = "0.1.0-beta.1", path = "crates/brk_traversable", features = ["pco", "derive"] }
brk_traversable_derive = { version = "0.1.0-beta.1", path = "crates/brk_traversable_derive" }
brk_types = { version = "0.1.0-beta.1", path = "crates/brk_types" }
brk_website = { version = "0.1.0-beta.1", path = "crates/brk_website" }
byteview = "0.10.0"
color-eyre = "0.6.5"
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
fjall = "3.0.1"
jiff = { version = "0.2.18", features = ["perf-inline", "tz-system"], default-features = false }
minreq = { version = "2.14.1", features = ["https", "json-using-serde"] }
owo-colors = "4.2.3"
parking_lot = "0.12.5"
rayon = "1.11.0"
rustc-hash = "2.1.1"
schemars = "1.2.0"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
serde_json = { version = "1.0.149", features = ["float_roundtrip", "preserve_order"] }
smallvec = "1.15.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tower-http = { version = "0.6.8", features = ["catch-panic", "compression-br", "compression-gzip", "compression-zstd", "cors", "normalize-path", "timeout", "trace"] }
tower-layer = "0.3"
vecdb = { version = "0.6.5", features = ["derive", "serde_json", "pco", "schemars"] }
# vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco", "schemars"] }

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
tag-message = "release: v{{version}}"

[workspace.metadata.dist]
cargo-dist-version = "0.30.2"
ci = "github"
allow-dirty = ["ci"]
installers = []
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
