[package]
name = "brk_computer"
description = "A Bitcoin dataset computer built on top of brk_indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["examples/"]

[dependencies]
bitcoin = { workspace = true }
brk_error = { workspace = true, features = ["vecdb"] }
brk_cohort = { workspace = true }
brk_fetcher = { workspace = true }
brk_indexer = { workspace = true }
brk_oracle = { workspace = true }
brk_logger = { workspace = true }
brk_rpc = { workspace = true, features = ["corepc"] }
brk_traversable = { workspace = true }
brk_types = { workspace = true }
derive_more = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
vecdb = { workspace = true }

[dev-dependencies]
brk_reader = { workspace = true }
brk_alloc = { workspace = true }
brk_bencher = { workspace = true }
color-eyre = { workspace = true }
